   './Build' were being found and treated as pod that needed to be
   converted to html during subsequent invokations. We now are more
   specific about the directories we scan for pod that needs to be
   converted, effectively avoiding blib/html. [Ray Zimmerman]

 - If Pod::Man is not available, we now skip building man pages
   (rather than dying) and tell the user why.

 - On some Unix platforms (BSD derivatives, mostly) perl's $^X
   variable isn't set to the full path of the perl executable, just
   'perl', when the 'Build' script is run as './Build' and not 'perl
   ./Build'.  This can lead to some other modules (maybe
   Test::Harness, maybe IO::File, I dunno...) getting very confused
   about where they are, and they try to load stuff from the wrong
   perl lib, and big trouble ensues.  To fix this, we now set $^X to
   the value of Module::Build->find_perl_interpreter().

 - The 'distcheck' action will now die() if it finds an error in the
   MANIFEST, rather than just printing on STDOUT. [David Golden]

 - Got rid of the t/MANIFEST file - it's superfluous, and it had
   zero-length, which some versions of Tar don't like. [William
   Underwood]

0.2608  Wed Jan 26 19:46:09 CST 2005

 - Add workaround for test files because Devel::Cover causes
   require to fail when the argument to require is an expression
   involving File::Spec. We now assign the result of the File::Spec
   call to a variable and then call require with that variable.

 - Tilde-expansion is now performed on arguments passed to a
   compatibility-Makefile.PL [Spotted by Sam Vilain]

 - We now run the 'gzip' and 'tar' values through split_like_shell()
   when running the 'dist' action, so that e.g. the 'gzip' value can
   be set to something like "gzip -f --best" and it'll work
   correctly. [Spotted by Chris Dolan]

 - Work around some bad mojo between Fedora Core [with its very long
   @INC] and old versions of Test::Harness [with its propensity to