@@ -2386,6 +2386,11 @@ sub install_map {
     }
   }
 
+  # Write the packlist into the same place as ExtUtils::MakeMaker.
+  my $archdir = $self->install_destination('arch');
+  my $ext = File::Spec->catdir(split /::/, $self->module_name);
+  $map{write} = File::Spec->catdir($archdir, 'auto', $ext, '.packlist');
+  
   if (length(my $destdir = $self->{properties}{destdir} || '')) {
     foreach (keys %map) {
       # Need to remove volume from $map{$_} using splitpath, or else
